--- a/dev-site.yml
+++ b/dev-site.yml
@@ -2,9 +2,8 @@ runtime:
   cache_dir: ./.cache/antora
 
 site:
-  title: Clusters and Governance
-  #url: http://localhost:3000/rhs-openshift-starter-guides/index.html
-  start_page: acm-workshop::index.adoc
+  title: OpenShift DevSpaces
+  start_page: dev-spaces-workshop::index.adoc
 
 content:
   sources:
@@ -14,9 +13,7 @@ content:
 
 asciidoc:
   attributes:
-    app-1: layer1
-    app-2: layer2
-    app-3: layer3
+    tbd: tbd-value
   extensions:
     - ./lib/remote-include-processor.js
     - ./lib/tab-block.js
@@ -26,4 +23,4 @@ ui:
     snapshot: true
   supplemental_files: ./supplemental-ui
 output:
-  dir: ./acm-workshop
+  dir: ./dev-spaces-workshop
